# ipp-cpp-x11-Gray-To-RGBA

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
